@@ -1,5 +1,6 @@
 Revision history for Web::ComposableRequest
 
+          - Enhanced L10N locale attribute builder
           - Better prereq data for build and test phases
 
 0.3.1     2015-08-28 17:05:34
